# app/Http/Resources/PlanResource.php
@@ -20,6 +20,12 @@ use Illuminate\Http\Resources\Json\JsonResource;
  *         @OA\Property(property="id", type="integer", example=1),
  *         @OA\Property(property="name", type="string", example="Программа на массу")
  *     ),
+ *     @OA\Property(property="exercises", type="array", 
+ *         @OA\Items(type="object",
+ *             @OA\Property(property="id", type="integer", example=1),
+ *             @OA\Property(property="name", type="string", example="Жим лежа")
+ *         )
+ *     ),
  *     @OA\Property(property="created_at", type="string", format="date-time", example="2024-01-01T00:00:00.000000Z"),
  *     @OA\Property(property="updated_at", type="string", format="date-time", example="2024-01-01T00:00:00.000000Z")
  * )
@@ -41,6 +47,12 @@ final class PlanResource extends JsonResource
                 'id' => $this->cycle->id,
                 'name' => $this->cycle->name,
             ],
+            'exercises' => $this->planExercises->map(function ($planExercise) {
+                return [
+                    'id' => $planExercise->exercise->id,
+                    'name' => $planExercise->exercise->name,
+                ];
+            }),
             'created_at' => $this->created_at?->toISOString(),
             'updated_at' => $this->updated_at?->toISOString(),
         ];
